src/main/java/com/example/redditclone/validation/UpdateValidation.java
package com.example.redditclone.validation;

public interface UpdateValidation {
}
